# fanbox_dl

./: .gitignore  Cargo.toml  README.md  delete.sh
src/: main.rs
