[package]
name = "fanbox_dl"
version = "0.1.0"
authors = ["whoami <whoami@example.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-util = "0.3"
headless_chrome = "0.9.0"
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
